--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,11 @@ services:
     expose:
       - "50000"
     healthcheck:
-      test: ["CMD", "nc", "-z", "localhost", "8080"]
+      test: ["CMD", "/docker-healthcheck.sh"]
       interval: 1m
       timeout: 10s
       retries: 3
+      start_period: 1m
     labels:
       com.ragedunicorn.jenkins.environment: "prod"
       com.ragedunicorn.jenkins.description: "Jenkins"
